<resources>
    <string name="app_name">Shopping App</string>
    <string name="header_image_background">header image background</string>
    <string name="header_image_app_icon">header image app icon</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="log_in_btn_text">LOG IN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up"><u>SIGN UP</u></string>
    <string name="enter_your_email_address_to_reset_your_password">Enter your email address to reset your password</string>
    <string name="submit">SUBMIT</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="confirm_password">confirm Password</string>
    <string name="agree_terms_and_conditions">Agree terms and conditions</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="app_icon">App Icon</string>
    <string name="app_name_shop">SHOP PAL</string>
    <string name="created_by_creator">created by Abhijit</string>
    <string name="profile_header_text">PROFILE</string>
    <string name="mobile_number">mobile number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save_user_info_btn_text">SAVE</string>
    <string name="please_wait">Please Wait …</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_products">Products</string>
    <string name="title_orders">Orders</string>
    <string name="action_settings">Settings</string>
    <string name="settings">SETTINGS</string>
    <string name="settings_header_image">settings_header_image</string>
    <string name="edit">Edit</string>
    <string name="name">name</string>
    <string name="demo_name">Abhijit Puri</string>
    <string name="demo_email">puriabhijit000@gmail.com</string>
    <string name="demo_mobile_number">9623697793</string>
    <string name="addresses">Addresses</string>
    <string name="address_image_button">address_image_button</string>
    <string name="logout">LOGOUT</string>
    <string name="mobile">mobile</string>
    <string name="back_btn_settings_activity">back_btn_settings_activity</string>
    <string name="add_product">Add Product</string>
    <string name="back_button_add_product_activity">back button add product activity</string>
    <string name="submit_add_product">SUBMIT</string>
    <string name="no_product_found">No Product found.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_details_title">Product Details</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="go_to_cart">GO TO CART</string>
    <string name="checkout">Checkout</string>
</resources>

