<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_sign_up_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.example.shoppingapp.utils.customViews.BoldTextView
                android:id="@+id/tv_create_acc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_an_account"
                android:gravity="center"
                android:padding="4dp"
                android:textSize="20sp" />

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_box_first_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:hint="@string/first_name"
            app:boxCornerRadiusBottomEnd="24dp"
            app:boxCornerRadiusBottomStart="24dp"
            app:boxCornerRadiusTopEnd="24dp"
            app:boxCornerRadiusTopStart="24dp"
            app:boxStrokeColor="@color/orange"
            app:expandedHintEnabled="false"
            app:hintTextColor="@color/hint_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_sign_up_activity">

            <com.example.shoppingapp.utils.customViews.MyEditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_box_last_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:hint="@string/last_name"
            app:boxCornerRadiusBottomEnd="24dp"
            app:boxCornerRadiusBottomStart="24dp"
            app:boxCornerRadiusTopEnd="24dp"
            app:boxCornerRadiusTopStart="24dp"
            app:boxStrokeColor="@color/orange"
            app:expandedHintEnabled="false"
            app:hintTextColor="@color/hint_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_box_first_name">

            <com.example.shoppingapp.utils.customViews.MyEditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_box_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:hint="@string/email"
            app:boxCornerRadiusBottomEnd="24dp"
            app:boxCornerRadiusBottomStart="24dp"
            app:boxCornerRadiusTopEnd="24dp"
            app:boxCornerRadiusTopStart="24dp"
            app:boxStrokeColor="@color/orange"
            app:expandedHintEnabled="false"
            app:hintTextColor="@color/hint_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_box_last_name">

            <com.example.shoppingapp.utils.customViews.MyEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_box_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:hint="@string/password"
            app:boxCornerRadiusBottomEnd="24dp"
            app:boxCornerRadiusBottomStart="24dp"
            app:boxCornerRadiusTopEnd="24dp"
            app:boxCornerRadiusTopStart="24dp"
            app:boxStrokeColor="@color/orange"
            app:expandedHintEnabled="false"
            app:hintTextColor="@color/hint_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_box_email">

            <com.example.shoppingapp.utils.customViews.MyEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_box_confirm_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:hint="@string/confirm_password"
            app:boxCornerRadiusBottomEnd="24dp"
            app:boxCornerRadiusBottomStart="24dp"
            app:boxCornerRadiusTopEnd="24dp"
            app:boxCornerRadiusTopStart="24dp"
            app:boxStrokeColor="@color/orange"
            app:expandedHintEnabled="false"
            app:hintTextColor="@color/hint_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_box_password">

            <com.example.shoppingapp.utils.customViews.MyEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                />


        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/ll_terms_and_conditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_box_confirm_password">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_terms_and_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/pink"
                android:checked="false"/>

            <com.example.shoppingapp.utils.customViews.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_terms_and_conditions"/>


        </LinearLayout>

        <com.example.shoppingapp.utils.customViews.MyButton
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="@drawable/button_background"
            android:padding="14dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_terms_and_conditions" />

        <LinearLayout
            android:id="@+id/ll_already_have_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="48dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_up">

            <com.example.shoppingapp.utils.customViews.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account" />

            <com.example.shoppingapp.utils.customViews.BoldTextView
                android:id="@+id/tv_go_to_log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginStart="16dp"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/login" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>






</ScrollView>