<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activities.UserProfile">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_user_profile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/gradient_color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.shoppingapp.utils.customViews.BoldTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginEnd="32dp"
            android:paddingEnd="0dp"
            android:paddingStart="0dp"
            android:text="@string/profile_header_text"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_user_image"
                android:layout_width="210dp"
                android:layout_height="210dp"
                android:layout_gravity="center"
                android:padding="8dp"
                app:civ_border_width="4dp"
                app:civ_border_overlay="true"
                android:src="@drawable/user_img_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_first_name"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_user_image"
        app:boxCornerRadiusTopEnd="20dp"
        android:hint="@string/first_name"
        app:hintTextColor="@color/hint_text_color"
        app:boxStrokeColor="@color/orange"
        app:expandedHintEnabled="false"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        >

        <com.example.shoppingapp.utils.customViews.MyEditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_last_name"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_first_name"
        app:boxCornerRadiusTopEnd="20dp"
        android:hint="@string/last_name"
        app:hintTextColor="@color/hint_text_color"
        app:boxStrokeColor="@color/orange"
        app:expandedHintEnabled="false"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        >

        <com.example.shoppingapp.utils.customViews.MyEditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_last_name"
        app:boxCornerRadiusTopEnd="20dp"
        android:hint="@string/email"
        app:hintTextColor="@color/hint_text_color"
        app:boxStrokeColor="@color/orange"
        app:expandedHintEnabled="false"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        >

        <com.example.shoppingapp.utils.customViews.MyEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_mobile_number"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_email"
        app:boxCornerRadiusTopEnd="20dp"
        android:hint="@string/mobile_number"
        app:hintTextColor="@color/hint_text_color"
        app:boxStrokeColor="@color/orange"
        app:expandedHintEnabled="false"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        >

        <com.example.shoppingapp.utils.customViews.MyEditText
            android:id="@+id/et_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
           />

    </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radio_grp_gender"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/input_layout_mobile_number" >


                <com.example.shoppingapp.utils.customViews.MyRadioButton
                    android:id="@+id/radio_btn_male"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_gender_tab_selector"
                    android:checked="true"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/male"
                    android:layout_marginEnd="3dp"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <com.example.shoppingapp.utils.customViews.MyRadioButton
                    android:id="@+id/radio_btn_female"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_gender_tab_selector"
                    android:checked="false"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/female"
                    android:layout_marginStart="3dp"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

            </RadioGroup>


            <com.example.shoppingapp.utils.customViews.MyButton
                android:id="@+id/btn_save_user_info"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                app:layout_constraintTop_toBottomOf="@+id/radio_grp_gender"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/save_user_info_btn_text"
                android:textColor="@color/white"
                android:textSize="24sp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</LinearLayout>